# AURA

./: .gitignore  .gitmodules  =0.25.0  README.md  reorder_indices.py  run_micromix.sh  test.sh  utilize.py
benchmarks/: benchmark_e2e_aura.py  benchmark_layer_aura.py  modeling_aura.py  modeling_micromix.py  trt-fp8-layer-qwen.py  trt-fp8-prefill-llama.py  trt-fp8-prefill-qwen.py  trt-fp8-profiler.py
eval_plus/: generate.py  hf.py  modelutils_qwen.py  qLinearLayer.py  qQwenLayer.py  quant.py  requirements.txt
eval_plus/output/: raw_humaneval_results.txt
eval_plus/output/humaneval/: raw_humaneval_1.5B_results.txt  raw_humaneval_14B_results.txt  raw_humaneval_32B_results.txt
eval_plus/output/humaneval/codeqwen_32B_temp_0.0/: args.txt
eval_plus/output/humaneval/qwen2_1.5B_temp_0.0/: args.txt  eval_results.json
eval_plus/output/humaneval/qwen2_14B_temp_0.0/: args.txt  eval_results.json
eval_plus/output/humaneval/qwen2_32B_temp_0.0/: args.txt  eval_results.json
eval_plus/output/humaneval/qwen2_7B_temp_0.0/: args.txt  eval_results.json
eval_plus/output/humaneval/qwen2_chat_temp_0.0/: eval_results.json
eval_plus/output/humaneval_chat_temp_0.0/: args.txt  eval_results.json
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_0/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_1/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_10/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_100/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_101/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_102/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_104/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_105/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_106/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_107/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_108/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_109/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_11/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_110/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_111/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_113/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_114/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_115/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_116/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_117/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_118/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_119/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_12/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_120/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_121/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_122/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_123/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_124/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_125/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_126/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_127/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_128/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_129/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_130/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_131/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_132/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_133/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_134/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_135/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_136/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_137/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_138/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_139/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_140/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_141/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_142/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_143/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_144/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_145/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_146/: 0.py
eval_plus/output/humaneval_chat_temp_0.0/HumanEval_147/: 0.py
eval_plus/output/mbpp/: raw_mbpp_1.5B_results.txt  raw_mbpp_14B_results.txt  raw_mbpp_32B_results.txt  raw_mbpp_7B_results.txt  raw_mbpp_chat_results.txt
eval_plus/output/mbpp_chat_temp_0.0/: eval_results.json
kernels/: CMakeLists.txt  README.md  bench.py  fake.py  main.py  remake.sh
kernels/benchmark/: bench_nvfp4.cu  bench_reorder.cu
kernels/include/: nvfp4.h  reorder.cuh
kernels/src/: bindings.cpp  down.cu  nvfp4.cu  reorder.cu  rmsnorm.cu
model/: __init__.py  kv_cache.py  main.py  model_utils.py  qLinearLayer.py  qLlamaLayer.py  qQwenLayer.py  quantize.py  requirements.txt
(+2894 files in other folders)
